initial setup done?

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=Project
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+
+#for production data base, if it is not created the automatically created
+spring.data.mongodb.database=hyperion
+
+#for username and pass if required
+#spring.data.mongodb.username=
+#spring.data.mongodb.passwod=
