--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
-HELP.md
+# Ignore target directories
 target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
 
-### STS ###
+# Ignore Maven Wrapper files
+.mvn/wrapper/
+mvnw
+mvnw.cmd
+
+# STS
 .apt_generated
 .classpath
 .factorypath
@@ -13,21 +15,19 @@ target/
 .springBeans
 .sts4-cache
 
-### IntelliJ IDEA ###
-.idea
+# IntelliJ IDEA
+.idea/
 *.iws
 *.iml
 *.ipr
 
-### NetBeans ###
+# NetBeans
 /nbproject/private/
 /nbbuild/
 /dist/
 /nbdist/
 /.nb-gradle/
 build/
-!**/src/main/**/build/
-!**/src/test/**/build/
 
-### VS Code ###
+# VS Code
 .vscode/
