--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
-# Ignore target directories
+HELP.md
 target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
 
-# Ignore Maven Wrapper files
-.mvn/wrapper/
-mvnw
-mvnw.cmd
-
-# STS
+### STS ###
 .apt_generated
 .classpath
 .factorypath
@@ -15,19 +13,21 @@ mvnw.cmd
 .springBeans
 .sts4-cache
 
-# IntelliJ IDEA
-.idea/
+### IntelliJ IDEA ###
+.idea
 *.iws
 *.iml
 *.ipr
 
-# NetBeans
+### NetBeans ###
 /nbproject/private/
 /nbbuild/
 /dist/
 /nbdist/
 /.nb-gradle/
 build/
+!**/src/main/**/build/
+!**/src/test/**/build/
 
-# VS Code
+### VS Code ###
 .vscode/
